# overdrive

./: .gitignore  ABSTRACTION.md  CHANGES.md  CLAUDE.md  GO_BACKEND.md  GO_PARITY.md  OPENGL.MD  OPENGL.md  README.md  REV.md  REV2.md  TODO.md  go.mod  go.sum  main.go  old_main.go  opengl.md  overdrive.sh  overdrive_build.sh  test.go  test_ecs.go  tutorial_cmake.cmake  untitled.xml  xml_export.py
.claude/: settings.local.json
assets/: planet.xml  sphere.blend  sphere.blend1  sphere.xml  untitled.blend  untitled.blend1  untitled.xml
assets/meshes/: Body.002.mtl  Cube.001.mtl  Cube.002.mtl  Cube.003.mtl  Cube.mtl  Plane.mtl  Ship.mtl  Sphere.mtl  Suzanne.002.mtl  Suzanne.mtl  Text.mtl
assets/models/: AT-AT.fbx
callback/: callback.go  input.go
core/: app.go  ui.go
cpp/: .gitignore  BACKEND.md  CMakeLists.txt  main.cpp
cpp/assets/: showcase.xml  untitled.blend
cpp/assets/meshes/: Cube.001.mtl  DemoCube.mtl  DemoGround.mtl  DemoSphereBrick.mtl  DemoSphereChrome.mtl  DemoSuzanne.mtl
cpp/core/: App.cpp  App.hpp
cpp/include/: glad.h  tiny_obj_loader.h
cpp/include/glad/: glad.h
cpp/input/: Input.cpp  Input.hpp
cpp/opengl/: Backend.cpp  Backend.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
cpp/renderer/: Backend.hpp  Shader.hpp
cpp/scene/: Camera.hpp  Light.cpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Scene.cpp  Scene.hpp  Skybox.cpp  Skybox.hpp
cpp/settings/: Settings.cpp  Settings.hpp
cpp/shaders/: depth.frag.glsl  depth.vert.glsl  depth_cube.frag.glsl  depth_cube.geo.glsl  depth_cube.vert.glsl  forward.frag.glsl  forward.vert.glsl  skybox.vert.glsl
cpp/shaders/slang/: common.slang  downgrade.cmake  forward.slang  skybox.slang
cpp/shaders/vulkan/: common.glsl  depth.frag.glsl  depth.frag.spv  depth.vert.glsl  depth.vert.spv  depth_cube.frag.glsl  depth_cube.frag.spv  depth_cube.geo.glsl  depth_cube.geo.spv  depth_cube.vert.glsl  depth_cube.vert.spv  forward.frag.glsl  forward.frag.spv  forward.vert.glsl  forward.vert.spv  skybox.frag.glsl  skybox.frag.spv  skybox.vert.glsl  skybox.vert.spv
cpp/src/: glad.c
cpp/vulkan/: Backend.cpp  Backend.hpp  Shader.cpp  Shader.hpp  ThirdParty.cpp  Uniforms.hpp
ecs/: ecs.go  entity.go
go/assets/: sphere.blend
go/assets/meshes/: Suzanne.002.mtl
go/input/: callback.go  input.go
go/physics/: box_old.go
go/scene/: scene.go
go/settings/: settings.go
go/shaders/: depth_cube.frag.glsl  ui.frag.glsl
go_deprecated/: build_shaders.sh  go.mod  go.sum  main.go
go_deprecated/core/: app.go  ui.go
go_deprecated/input/: callback.go
go_deprecated/opengl/: backend.go  shader.go  texture.go  uniforms.go
go_deprecated/renderer/: backend.go  uniforms.go
go_deprecated/scene/: light.go  material.go  mesh.go  scene.go
go_deprecated/shaders/: cubes.frag.glsl  depth.vert.glsl  light.vert.glsl
go_deprecated/shaders/slang/: depth_cube.slang
go_deprecated/tutorial/: tutorial.h
go_deprecated/utils/: utils.go
go_deprecated/vulkan/: backend.go  buffer.go  draw.go  swapchain.go
input/: callback.go  input.go
notes/: ALGEBRA.md  ARCHITECTURE.md  BACKEND.md  FEATURES.md  NEXT_LEVEL.md  OPENGL.md  OPTIMISATION.md  PBR.md  PIPELINE.md  RAYTRACING.md  RAYTRACING_PLAN.md  REV.md  UNDERSTANDING.md  VULKAN.md
opengl/: camera.go  shader.go  texture.go
physics/: box.go  link.go  plane.go  sphere.go  verlet.go
plugin/: xml_export.py
scene/: camera.go  light.go  loader.go  material.go  mesh.go  scene.go  skybox.go
settings/: settings.go
shaders/: clouds.frag.glsl  clouds.vert.glsl  cubes.frag.glsl  cubes.vert.glsl  depth_cube.frag.glsl  depth_cube.geo.glsl  depth_cube.vert.glsl  depth_debug.frag.glsl  frag.glsl  light.frag.glsl  skybox.vert.glsl  ui.frag.glsl  vert.glsl  water.frag.glsl
src/: build_shaders.sh  go.mod  main.go
src/assets/: cube.xml  demo.xml  showcase.xml  sphere.blend1  untitled.blend1
src/assets/meshes/: DemoCube.mtl  DemoGround.mtl  DemoSphereBrick.mtl
src/core/: app.go
src/ecs/: entity.go
src/opengl/: shader.go  uniforms_test.go
src/physics/: plane.go  sphere.go  verlet.go
src/renderer/: uniforms.go
src/scene/: light.go  mesh.go  scene.go  showcase_test.go  skybox.go
src/shaders/slang/: common.slang  depth.slang  depth_cube.slang  forward.slang  ui.slang
src/vulkan/: backend.go  shader.go  texture.go
tutorial/: tutorial.cpp
utils/: utils.go
